[gd_scene load_steps=8 format=3 uid="uid://trap"]

[ext_resource type="Script" uid="uid://ku0gcqki2kse" path="res://engine/traps/ActorTrap2D.gd" id="1"]
[ext_resource type="Texture2D" path="res://assets/placeholder_trap.tres" id="2"]
[ext_resource type="Script" path="res://engine/fsm/StateMachine.gd" id="3"]
[ext_resource type="Script" path="res://engine/fsm/states/TrapArmed.gd" id="4"]
[ext_resource type="Script" path="res://engine/fsm/states/TrapTriggered.gd" id="5"]
[ext_resource type="Script" path="res://engine/core/ActorInterface.gd" id="6"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(24, 12)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(20, 12)

[node name="ActorTrap2D" type="StaticBody2D"]
collision_layer = 64
collision_mask = 6
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("1")

[node name="SpriteRoot" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="SpriteRoot"]
position = Vector2(0, -6)
texture = ExtResource("2")

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(0, -6)
shape = SubResource("2")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3")
initial_state = "Armed"

[node name="Armed" type="Node" parent="StateMachine"]
script = ExtResource("4")

[node name="Triggered" type="Node" parent="StateMachine"]
script = ExtResource("5")

[node name="ActorInterface" type="Node" parent="."]
script = ExtResource("6")
